# yaau

./: .gitignore  README.md  init_env.sh  pyproject.toml
nb/: classifier_rating.ipynb  super_res-custom-vgg-rating.ipynb  super_res-custom-vgg.ipynb
nb/danbooru/: classifier_rating.ipynb  classifier_tags.ipynb  super_res-custom-vgg-rating.ipynb
nb/painting/: classifier_artist.ipynb
yauu/: export_to_onnx.py  gui.py  super_res.py  web.py
yauu/training/: data.py  loss.py  train_super_res.py
