[tool.poetry]
name = "yaau"
version = "0.1.0"
description = ""
authors = ["Luc Léonard <github@luc-leonard.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
progressbar2 = "^3.53.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
